@@ -197,6 +197,8 @@ Trunk (Unreleased)
 
     HADOOP-10793. KeyShell args should use single-dash style. (wang)
 
+    HADOOP-10936. Change default KeyProvider bitlength to 128. (wang)
+
   BUG FIXES
 
     HADOOP-9451. Fault single-layer config if node group topology is enabled.
